justify, align, flex grow and flex shrink

--- a/html&css/flexbox/flexbox.html
+++ b/html&css/flexbox/flexbox.html
@@ -160,5 +160,57 @@
 
         </div>
     </div>
+<div
+style="
+display: flex;
+flex-wrap: wrap;
+gap:20px;
+border:1px solid black;
+margin-top:100px;
+justify-content: space-evenly;
+min-height:1000px;
+align-items: center; 
+/* works in cross axis individually  */
+align-content: center;
+/* works in aligning all these individual flexes together */
+">
+    <div style="background-color: lightblue; width: 200px; height: 200px; display: flex; justify-content: center; align-items: center;">box 1</div>
+    <div style="background-color: lightpink; width: 200px; height: 200px; display: flex; justify-content: center; align-items: center;">box 2</div>
+    <div style="background-color: lightgreen; width: 200px; height: 200px; display: flex; justify-content: center; align-items: center;">box 3</div>
+    <div style="background-color: lightyellow; width: 200px; height: 200px; display: flex; justify-content: center; align-items: center;">box 4</div>
+    <div style="background-color: lightskyblue; width: 200px; height: 200px; display: flex; justify-content: center; align-items: center;">box 5</div>
+    <div style="background-color: lightblue; width: 200px; height: 200px; display: flex; justify-content: center; align-items: center;">box 6</div>
+    <div style="background-color: lightpink; width: 200px; height: 200px; display: flex; justify-content: center; align-items: center;">box 7</div>
+    <div style="background-color: lightgreen; width: 200px; height: 200px; display: flex; justify-content: center; align-items: center;">box 8</div>
+    <div style="background-color: lightyellow; width: 200px; height: 200px; display: flex; justify-content: center; align-items: center;">box 9</div>
+</div>
+
+
+
+<div
+style="
+display: flex;
+gap:20px;
+border:1px solid black;
+margin-top:100px;
+justify-content: space-evenly;
+min-height:400px;
+align-items: center; 
+align-content: center;
+
+
+/* apply flex grow and flex shrink */
+">
+    <div style="background-color: lightblue; width: 200px; height: 200px; display: flex; justify-content: center; align-items: center;">box 1</div>
+    <div style="background-color: lightpink; width: 200px; height: 200px; display: flex; justify-content: center; align-items: center;">box 2</div>
+    <div style="background-color: lightgreen; width: 200px; height: 200px; display: flex; justify-content: center; align-items: center;">box 3</div>
+    <div style="background-color: lightyellow; width: 200px; height: 200px; display: flex; justify-content: center; align-items: center;">box 4</div>
+    <div style="background-color: lightskyblue; width: 200px; height: 200px; display: flex; justify-content: center; align-items: center;">box 5</div>
+    <div style="background-color: lightblue; width: 200px; height: 200px; display: flex; justify-content: center; align-items: center;">box 6</div>
+    <div style="background-color: lightpink; width: 200px; height: 200px; display: flex; justify-content: center; align-items: center;">box 7</div>
+    <div style="background-color: lightgreen; width: 200px; height: 200px; display: flex; justify-content: center; align-items: center;">box 8</div>
+    <div style="background-color: lightyellow; width: 200px; height: 200px; display: flex; justify-content: center; align-items: center;">box 9</div>
+</div>
+
 </body>
 </html>
