Youtube header partially done

--- a/html&css/Youtube/youtube.html
+++ b/html&css/Youtube/youtube.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style_video.css">
     <link rel="stylesheet" href="style_header.css">
     <link rel="stylesheet" href="general.css">
+    <link rel="stylesheet" href="sidebar.css">
 
 </head>
 
@@ -44,6 +45,9 @@
             <div><button class="profile"><img src="../challenges/kitty-cat-kitten-pet-45201.jpeg" alt=""></button></div>
         </div>
 
+    </div>
+    <div class="sidebar">
+        Sidebar
     </div>
 
     <div class="grid">
