updated product card

--- a/html&css/Position/practice.html
+++ b/html&css/Position/practice.html
@@ -63,6 +63,8 @@
             <div style="position:absolute; top:10px; right: 10px;
                 
                 background-color: rgb(255, 0, 0); color:white; padding:15px; border-radius: 15px;">-20%</div>
+                <div style="background-color: rgba(0,0,0,0.1); position: absolute; bottom:0px; left: 0; right:0; height: 20px;
+                color: green; font-weight: 900; font-size:15px;">Grab Now!</div>
         </div>
         <div>
             <h2 style="margin:0px; margin-bottom: 4px;">Smart Watch</h2>
