--- a/html&css/Youtube/youtube.html
+++ b/html&css/Youtube/youtube.html
@@ -53,7 +53,30 @@
 
     </div>
     <div class="sidebar">
-        Sidebar
+        <div class="sidebar-link">
+            <img src="Sidebar-images/home.svg" alt="" style="width: 30px;">
+            Home
+        </div>
+        <div class="sidebar-link">
+            <img src="Sidebar-images/explore.svg" alt="" style="width: 30px;">
+            Explore
+        </div>
+        <div class="sidebar-link">
+            <img src="Sidebar-images/subscriptions.svg" alt="" style="width: 30px;">
+            Subscriptions
+        </div>
+        <div class="sidebar-link">
+            <img src="Sidebar-images/originals.svg" alt="" style="width: 30px;">
+            Originals
+        </div>
+        <div class="sidebar-link">
+            <img src="Sidebar-images/youtube-music.svg" alt="" style="width: 30px;">
+            Youtube Music
+        </div>
+        <div class="sidebar-link">
+            <img src="Sidebar-images/library.svg" alt="" style="width: 30px;">
+            Library
+        </div>
     </div>
 
     <div class="grid">
