--- a/html&css/Youtube/youtube.html
+++ b/html&css/Youtube/youtube.html
@@ -30,16 +30,22 @@
                 <div class="search-icon">
                     <button>
                         <img src="header/search.svg" alt=""></button>
+                    <div class="tooltip">Search</div>
                 </div>
             </div>
             <div class="voice-icon">
                 <button class="icon"><img src="header/voice-search-icon.svg" alt=""></button>
+                <div class="tooltip">Search with your voice</div>
             </div>
         </div>
 
         <div class="header-end">
 
-            <div ><button class="icon"><img src="header/upload.svg" alt=""></button></div>
+            <div >
+                <button class="icon">
+                    <img src="header/upload.svg" alt="">
+                </button>
+            </div>
             <div ><button class="icon"><img src="header/youtube-apps.svg" alt=""></button></div>
             <div  style="position: relative;">
                 <button class="icon">
